# Tesi

./: README.md
cable_model/: CMakeLists.txt  README.md  package.xml
cable_model/include/: cable_dynamics.cpp  cable_dynamics.hpp  cable_masses.cpp  cable_masses.hpp  cable_model.cpp  cable_model.hpp  cable_physic.cpp  cable_physic.hpp
cable_model/include/cable_model/: sdf_builder.cpp  sdf_builder.hpp  sdf_sphere.cpp  sdf_sphere.hpp
cable_model/launch/: cable_spawn.launch
cable_model/src/: ModelCablePlugin.cpp  ModelCablePlugin.hpp  WorldCablePlugin.cpp  WorldCablePlugin.hpp
cable_model/srv/: CableMsg.srv
cable_model/worlds/: cable_push.world
robotiq_hand_e/: CMakeLists.txt  package.xml
robotiq_hand_e/config/: joint_names_robotiq_wiring.yaml  robotiq_controller.yaml
robotiq_hand_e/launch/: display.launch  gazebo.launch  gripper_controller_spawn.launch
robotiq_hand_e/meshes/: finger_left.STL  finger_right.STL  wiring_gripper.STL
robotiq_hand_e/rviz/: moveit.rviz
robotiq_hand_e/urdf/: robotiq.xacro  robotiq_trasmission.xacro  robotiq_wiring.csv  robotiq_wiring.urdf  robotiq_wiring.urdf.xacro
ur_cable_manipulation/: CMakeLists.txt  package.xml
ur_cable_manipulation/config/: arm_controller.yaml
ur_cable_manipulation/deprecated/: Box_Grasp.cpp  Cable_Grasping.cpp  Cable_Grasping_v2.cpp  Command_topic_traj.cpp  Demo_Jacobian.cpp  Demo_Move.cpp  README.txt  Slave_Controller (copia).cpp  Slave_Feedback.cpp  Trajectory_Publisher_Demo.cpp  ur_kin.cpp  ur_kin.h
ur_cable_manipulation/launch/: box_spawn.launch  controller_spawn.launch  demo_planner.launch  dual_arm.launch  j_r_state_spawn.launch  urdf_spawn_dual.launch
ur_cable_manipulation/src/: Master_Controller.cpp  Memory.txt  Slave_Controller.cpp
ur_cable_manipulation/xacro/: object.urdf  ur_dual_arm.xacro
ur_dual_arm_moveit_config/: CMakeLists.txt  package.xml
ur_dual_arm_moveit_config/config/: dual.srdf  fake_controllers.yaml  gazebo_dual.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
(+27 files in other folders)
